
[package]
name = "aoc-solutions"
version = "0.1.0"
authors = ["chenrui <keeptun.rcon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = '0.3.0'
aoc-runner-derive = '0.3.0'
regex = '1.4.2'
itertools = '0.8.2'
num = '0.1.42'
